# ockam

implementations/elixir/ockam/ockam/: mix.exs
implementations/elixir/ockam/ockam/lib/: ockam.ex
implementations/elixir/ockam/ockam/lib/ockam/: message.ex  node.ex  router.ex  telemetry_logger.ex
implementations/elixir/ockam/ockam/lib/ockam/transport/tcp/: client.ex
implementations/elixir/ockam/ockam/lib/ockam/wire/binary/v2/: route.ex
implementations/elixir/ockam/ockam_node_web/: mix.exs
implementations/rust/examples/credentials/: Cargo.toml
implementations/rust/examples/credentials/src/: holder.rs  issuer.rs  issuer_node.rs  main.rs  schema.rs  verifier.rs
implementations/rust/ockam/ockam/: Cargo.toml
implementations/rust/ockam/ockam_core/: Cargo.toml
implementations/rust/ockam/ockam_node/: Cargo.toml
implementations/rust/ockam/ockam_node_attribute/: Cargo.toml
implementations/rust/ockam/ockam_node_no_std/: Cargo.toml
implementations/rust/ockam/ockam_transport_tcp/: Cargo.toml
implementations/rust/ockam/ockam_vault/: Cargo.toml
implementations/rust/ockam/ockam_vault_core/: Cargo.toml
