[package]
name = "credentials"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2018"
description = """
An example of issuing, holding, and verifying a credential
"""

[dependencies]
hex = "0.4"
ockam = { version = "*", path = "../../ockam/ockam"}
ockam_node = { version = "*", path = "../../ockam/ockam_node"}
ockam_transport_tcp = { version = "*", path = "../../ockam/ockam_transport_tcp" }
structopt = "0.3"

# TODO: this dependency here is required because rustc doesn't yet
# support re-exporting attributes from crates.  Tracking issue:
# https://github.com/rust-lang/rust/issues/27812
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.3.2"

[[bin]]
name = "issuer"
path = "old_src/issuer.rs"

[[bin]]
name = "holder"
path = "old_src/holder.rs"

[[bin]]
name = "verifier"
path = "src/verifier.rs"

[[bin]]
name = "node"
path = "src/issuer_node.rs"